proj1/testing/error/trivialerr3.inp
* B BETA I II III IV AAAA
Hello world
* B BETA I II III AAAA
ILBDA AMTAZ
